--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"dinesh/barcode": "dev-master",
 		"baum/baum": "~1.0",
 		"bkwld/laravel-haml": "~2.0",
-		"maatwebsite/excel": "dev-master"
+		"maatwebsite/excel": "dev-master",
+		"liebig/cron": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
